# Hit-cpp

./: CMakeLists.txt  README.md  main.cpp
Include/: dataMatrixSolver.h  dataMatrixSolver2.h  fileHandler.h  imageHandler.h  lineSolver.h  minCircleSolver.h
Src/: dataMatrixSolver.cpp  dataMatrixSolver2.cpp  fileHandler.cpp  imageHandler.cpp  lineSolver.cpp  minCircleSolver.cpp
